fixed image cutoff

--- a/mustang.css
+++ b/mustang.css
@@ -1,34 +1,30 @@
-.image-grid{
-    --gap:16px;
-    --num-cols: 4;
-    --row-height: 300px;
-
-    box-sizing: border-box;
-    padding: var(--gap);
-
-    display: grid;
-    grid-template-columns: repeat(var(--num-cols), 1fr);
-    grid-auto-rows: var(--row-height);
-    gap: var(--gap);
+.showcase{
+    max-width:max-content;
+    width: 100%;
 }
 
-.image-grid > img{
+.photo-gallery{
+    display: flex;
+    gap: 20px;
+    margin: 40px;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.photo img{
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Maintain aspect ratio */
+    border-radius: 5px;
+    object-fit: cover;
 }
 
-.image-grid-col-2{
-    grid-column: span 2;
-}
-
-.image-grid-row-2{
-    grid-row: span 2;
-}
-
-@media screen and (max-width: 1024px) {
-    .image-grid{
-        --num-cols: 2;
-        --row-height: 200px
+@media(max-width:768px){
+    .photo-gallery{
+        flex-direction: column;
     }
 }
+
